fix(936): contain native descendants through parser process death